--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ur" dir="ltr">
 <head> 
-     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viralixo - Social Media Content Generator</title>
