--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ur" dir="ltr">
+     <script src="https://pl28374505.effectivegatecpm.com/dc/3d/07/dc3d079b9d961944b224f213f246d2fb.js"></script>
 <head> 
      <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
     <meta charset="UTF-8">
