--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ur" dir="ltr">
-     <script src="https://pl28374505.effectivegatecpm.com/dc/3d/07/dc3d079b9d961944b224f213f246d2fb.js"></script>
 <head> 
      <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viralixo - Social Media Content Generator</title>
+     <script async="async" data-cfasync="false" src="https://pl28374585.effectivegatecpm.com/1f0f81f4b0d8c72c10e48d3f0b804095/invoke.js"></script>
+<div id="container-1f0f81f4b0d8c72c10e48d3f0b804095"></div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -254,6 +255,8 @@
             color: var(--primary);
             font-size: 1.3rem;
         }
+         <script async="async" data-cfasync="false" src="https://pl28374585.effectivegatecpm.com/1f0f81f4b0d8c72c10e48d3f0b804095/invoke.js"></script>
+<div id="container-1f0f81f4b0d8c72c10e48d3f0b804095"></div>
 
         .copy-btn {
             background-color: var(--light-gray);
@@ -593,6 +596,8 @@
             <p>Yeh tool AI-based hai, is liye content ki accuracy ki guarantee nahi hai. Aap ko content check karna chahiye.</p>
         </section>
     </main>
+     <script async="async" data-cfasync="false" src="https://pl28374585.effectivegatecpm.com/1f0f81f4b0d8c72c10e48d3f0b804095/invoke.js"></script>
+<div id="container-1f0f81f4b0d8c72c10e48d3f0b804095"></div>
 
     <!-- Footer -->
     <footer>
