--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
      <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viralixo - Social Media Content Generator</title>
-     <script async="async" data-cfasync="false" src="https://pl28374585.effectivegatecpm.com/1f0f81f4b0d8c72c10e48d3f0b804095/invoke.js"></script>
-<div id="container-1f0f81f4b0d8c72c10e48d3f0b804095"></div>
+    <title>Viralixo - Social Media Content Generator</title
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -255,9 +253,7 @@
             color: var(--primary);
             font-size: 1.3rem;
         }
-         <script async="async" data-cfasync="false" src="https://pl28374585.effectivegatecpm.com/1f0f81f4b0d8c72c10e48d3f0b804095/invoke.js"></script>
-<div id="container-1f0f81f4b0d8c72c10e48d3f0b804095"></div>
-
+     
         .copy-btn {
             background-color: var(--light-gray);
             color: var(--dark);
@@ -596,8 +592,6 @@
             <p>Yeh tool AI-based hai, is liye content ki accuracy ki guarantee nahi hai. Aap ko content check karna chahiye.</p>
         </section>
     </main>
-     <script async="async" data-cfasync="false" src="https://pl28374585.effectivegatecpm.com/1f0f81f4b0d8c72c10e48d3f0b804095/invoke.js"></script>
-<div id="container-1f0f81f4b0d8c72c10e48d3f0b804095"></div>
 
     <!-- Footer -->
     <footer>
@@ -784,5 +778,7 @@
             }, 500);
         });
     </script>
+     <script async="async" data-cfasync="false" src="https://pl28374585.effectivegatecpm.com/1f0f81f4b0d8c72c10e48d3f0b804095/invoke.js"></script>
+<div id="container-1f0f81f4b0d8c72c10e48d3f0b804095"></div>
 </body>
   </html>
