--- a/index.html
+++ b/index.html
@@ -948,6 +948,7 @@
             element.classList.add('active');
             selectedPlatform = element.getAttribute('data-platform');
         }
+         <script src="https://pl28374505.effectivegatecpm.com/dc/3d/07/dc3d079b9d961944b224f213f246d2fb.js"></script>
 
         // Show different pages
         function showPage(pageId) {
