--- a/index.html
+++ b/index.html
@@ -835,6 +835,8 @@
             <p>Number 1 social media content generator ban-na jahan har koi apne liye perfect content generate kar sake.</p>
         </section>
 
+             <script> atOptions = { 'key' : 'f3db2397f9461071267ba7b6413212d2', 'format' : 'iframe', 'height' : 600, 'width' : 160, 'params' : {} }; </script> <script src="https://www.highperformanceformat.com/f3db2397f9461071267ba7b6413212d2/invoke.js"></script>
+
         <!-- Contact Us Page -->
         <section id="contact-page" class="page" style="display: none;">
             <h1>Contact Viralixo</h1>
@@ -925,7 +927,7 @@
             </div>
             
             <div class="copyright">
-                &copy; 2023 Viralixo. All rights reserved. | No login required. Fast and simple social media content generator.
+                &copy; 2026 Viralixo. All rights reserved. | No login required. Fast and simple social media content generator.
             </div>
         </div>
     </footer>
