--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                     <i class="fas fa-file-alt"></i>
                     Generated Content
                 </h2>
-                
+                <script> atOptions = { 'key' : 'aee3ada3176f78093c84492a74684584', 'format' : 'iframe', 'height' : 90, 'width' : 728, 'params' : {} }; </script> <script src="https://www.highperformanceformat.com/aee3ada3176f78093c84492a74684584/invoke.js"></script>
                 <!-- Title Suggestions -->
                 <div class="result-card">
                     <div class="result-title">
@@ -841,9 +841,9 @@
         <section id="contact-page" class="page" style="display: none;">
             <h1>Contact Viralixo</h1>
             <p>Agar aap ke koi sawaal hain, suggestions hain, ya koi masla hai toh hamse contact kar sakte hain:</p>
-            <p><strong>Email:</strong> support@viralixo.com</p>
+            <p><strong>Email:</strong> viralixo95@gmail.com</p>
             <p><strong>Phone:</strong> +92 300 1234567</p>
-            <p><strong>Address:</strong> Karachi, Pakistan</p>
+            <p><strong>Address:</strong> Lahore, Pakistan</p>
             <p>Ham koshish karenge ke 24 hours mein aap ko reply de dein.</p>
             
             <h2>Business Hours</h2>
